css/bento.css
#subbento{
  width:100%;
  display:grid;
  padding:10px;
  box-sizing: border-box;
  gap:10px; 
  background:#121212b8;
  border:1px solid #ffffff1d;
  border-radius:10px;
  grid-template-columns: repeat(var(--gr), 1fr);
  backdrop-filter: blur(10px);
  min-height:100px;
  user-select:none;
  -webkit-user-drag:none;
}

#subbento a{
  border-radius:7px;
  padding:10px;
  box-sizing:border-box;
  border:1px solid #ffffff1d;
  transition:filter .1s ease-out;
  position:relative;
}
#subbento a > *{
  pointer-events:none;
}
#subbento a:hover{
  filter:brightness(1.2);
}

#bento-610{
  /* background:linear-gradient(#176A4E, #0f4c3e); */
  background:radial-gradient(circle at top left, #176a4e72, #0000005b);
  overflow:hidden;
}
#bento-610 > div{
  opacity:.85;
  font-size:calc(var(--fsm) * 13.5px);
  /* font-size: 1rem; */
}

#bento-photography{
  /* aspect-ratio: 1 / 1; */
  background:linear-gradient(#333333, #1a1a1a);
  grid-column: span 2;
  grid-row: span 2;
  padding-top:15% !important;
  display:grid;
  /* aspect-ratio: 1 / 1; */
  flex-direction: column;
}

@media (max-width: 600px) {
  #bento-photography{
    height: calc(100vw - 50px);
  }
}
#bento-imagesnap{
  aspect-ratio: 1 / 1;
  /* background:linear-gradient(#ff8215, #cc7000); */
}

.bentobg{
  position:absolute;
  top:0px;
  left:0px;
  width:100%;
  height:100%;
  object-fit:cover;
  /* z-index:-1; */
  border-radius:7px;
}

#txt610{
  position: absolute;
  width: 46%;
  top: 47%;
  animation: txt610 10s linear infinite;
}
#scroll610{
  position: absolute;
  width: 50%;
  right: 0%;
  animation: scroll610 10s linear infinite;
}

@keyframes txt610{
  0% { top: 47%; animation-timing-function: cubic-bezier(0.55, 0, 0.175, 1); }
  25% { top: 30%; animation-timing-function: cubic-bezier(0.55, 0, 0.175, 1); }
  50% { top: 8%; animation-timing-function: cubic-bezier(0.55, 0, 0.175, 1); }
  75% { top: -7%; animation-timing-function: cubic-bezier(0.55, 0, 0.175, 1); }
  100% { top: -22%; }
}
@keyframes scroll610{
  0% { top: 0%; animation-timing-function: cubic-bezier(0.55, 0, 0.175, 1); }
  25% { top: -101%; animation-timing-function: cubic-bezier(0.55, 0, 0.175, 1); }
  50% { top: -202%; animation-timing-function: cubic-bezier(0.55, 0, 0.175, 1); }
  75% { top: -302%; animation-timing-function: cubic-bezier(0.55, 0, 0.175, 1); }
  100% { top: -402%; }
}

.photoscroll{
  width:100%;
  margin-top:10px;
  display:block;
  background-size:cover !important;
  background-repeat: repeat;
  animation: photoscroll 450s linear infinite;
  border-radius:7px;
  overflow:hidden;
  z-index:4;
  position:relative;
}

#ps1{
  background:url("/res/bento/photos/photo1.png");
}
#ps2{
  background:url("/res/bento/photos/photo2.png");
  animation-direction:reverse;
}
#ps3{
  background:url("/res/bento/photos/photo3.png");
}
@keyframes photoscroll{
  0% { background-position: 0% center; }
  100% { background-position: 2000% center; }
}

.bento-2-1{aspect-ratio: 2 / 1;grid-column: span 2;}
.bento-1-1{aspect-ratio: 1 / 1;}

.bentodouble{
  display:grid;
  grid-template-rows: repeat(2, 1fr);
  padding:0px !important;
  gap:10px;
}
#socialsgrid{
  display:grid;
  grid-template-columns: repeat(4, 23%);
  gap:10px;
  width:100%;
  overflow:hidden;
}
@media (max-width: 600px) {
  #socialsgrid{
    grid-template-columns: repeat(2, 49%);
    gap:3px;
  }
  .sociallink{
    padding:10px 6px;
  }
}
.sociallink{
  display:flex;
  max-width: 100%;
  width:100%;
  height:100%;
  font-size:16px;
  align-items:center;
  /* justify-content:center; */
  gap:10px;
  text-decoration: none;
  border-radius:10px;
  padding:10px 8px;
  box-sizing:border-box;
  text-decoration: none;
  cursor:pointer;
  border:1px solid transparent;
  box-sizing:border-box;
  transition:all .1s ease-out;
}
.sociallink:hover{
  filter:brightness(1.2);
  background:var(--foreground);
  border:1px solid var(--border);
}
.sociallink i{
  font-size:23px;
}

